Fixed an issue with vertical overflow in Webkit and Edge

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
     -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
-    min-height: 100vh;
+    min-height: 99.99vh;
 }
 
 ::selection {
